2025-05-29T00:55:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15313767947 # 658
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-29
* notice: last 14d: unq all: 2 10
* notice: prev accum: outdated-unq outdated-all / unq all: 544 937 / 555 948
* notice: next accum: outdated-unq outdated-all / unq all: 545 938 / 555 948
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-14] / []

2025-05-28T00:55:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15288943149 # 657
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-28
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 542 935 / 555 948
* notice: next accum: outdated-unq outdated-all / unq all: 544 937 / 555 948
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-13] / []

2025-05-27T00:54:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15264308220 # 656
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-27
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 541 934 / 555 948
* notice: next accum: outdated-unq outdated-all / unq all: 542 935 / 555 948
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-12] / []

2025-05-26T00:57:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15243877075 # 655