@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-29T00:55:53Z",
-  "count_outdated" : 938,
-  "uniques_outdated" : 545,
+  "timestamp" : "2025-05-30T00:55:37Z",
+  "count_outdated" : 940,
+  "uniques_outdated" : 547,
   "count" : 948,
   "uniques" : 555,
   "clones" : [
-    {
-      "timestamp": "2025-05-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-05-16T00:00:00Z",
       "count": 1,
