@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 2,
+  "count": 8,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2025-05-15T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-05-16T00:00:00Z",
       "count": 1,
