@@ -1,3 +1,12 @@
+2025-05-30T00:55:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15336724710 # 659
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-30
+* notice: last 14d: unq all: 1 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 545 938 / 555 948
+* notice: next accum: outdated-unq outdated-all / unq all: 547 940 / 555 948
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-05-15] / []
+
 2025-05-29T00:55:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15313767947 # 658
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-29
